# GPT-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  cookiecutter.json  main.py  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_slug}}/scripts/: gpt_commit.py  gptcommit
