[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-commit"
version = "0.0.1"
description = "Generate a Conventional Commit message from your staged diff using OpenAI's GPT."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "openai",
]

[project.scripts]
gpt-commit-message = "gpt_commit.main:main"